# Lightorch

./: CMakeLists.txt  README.md  module.cpp  module.hpp  test.cpp
autograd/: autograd.cpp  autograd.hpp
include/: autograd.hpp  common.hpp  header.hpp  module.hpp  storage.hpp  tensor.hpp
include/ops/: ops.hpp
include/optimizers/: optimizer.hpp  sgd.hpp
include/utils/: timer.hpp
ops/: ops.cpp  ops.hpp
src/: CMakeLists.txt  autograd.cpp  module.cpp  tensor.cpp
src/ops/: ops.cpp
src/optimizers/: optimizer.cpp  sgd.cpp
tensor/: tensor.cpp  tensor.hpp  test.cpp
tests/: CMakeLists.txt  basic_ops_test.cpp  matmul_test.cpp  tensor_test.cpp
